@@ -14,6 +14,7 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- Use decimal values for size and width in SVG output format (#2835)
 
 - Correct invalid test when loading movies in an swf ouput (#2524)
 
